--- a/S&P500.ipynb
+++ b/S&P500.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing libraries\n",
     "import pandas as pd\n",
     "import networkx as nx"
    ]
@@ -199,6 +200,7 @@
     }
    ],
    "source": [
+    "#Reading CSV file\n",
     "df = pd.read_csv('s&p500_companies.csv')\n",
     "df.head()"
    ]
@@ -285,6 +287,7 @@
     }
    ],
    "source": [
+    "#Dropping columns\n",
     "new_df = df.drop(['Exchange', 'Shortname', 'Longname', 'Industry', 'Currentprice', 'Ebitda', 'Revenuegrowth', \n",
     "                 'City', 'State', 'Country', 'Fulltimeemployees', 'Longbusinesssummary', 'Marketcap'],\n",
     "                 axis=1)\n",
@@ -298,6 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Saving a graph from Dataframe\n",
     "g = nx.from_pandas_edgelist(new_df, source = 'Symbol', target = 'Sector', edge_attr = 'Weight')"
    ]
   },
@@ -308,14 +312,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Saving the graph\n",
     "nx.write_graphml(g, 's&p4.graphml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "840fba51",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -381,13 +388,15 @@
        "4   Consumer Cyclical           0.113281"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Finding degree of centrality for each symbol and saving in a dictionary\n",
     "centrality_dict = nx.degree_centrality(g)\n",
+    "#Developing a sorted Dataframe\n",
     "sorted_df = pd.DataFrame(sorted(centrality_dict.items(), key = lambda x: x[1], reverse = True), columns=['Sector', 'Degree Centrality'])\n",
     "sorted_df[: 5]"
    ]
